# rspirv-ext

./: Cargo.toml  README.md
autogen/: Cargo.toml  README.md
autogen/src/: dr.rs  header.rs  main.rs  structs.rs  utils.rs
src/: lib.rs
src/dr/: autogen_glsl_std_450.rs  autogen_nonsemantic_debugprintf.rs  autogen_nonsemantic_shader_debuginfo_100.rs  autogen_opencl_std_100.rs  mod.rs
src/spirv/: autogen_glsl_std_450.rs  autogen_nonsemantic_debugprintf.rs  autogen_nonsemantic_shader_debuginfo_100.rs  autogen_opencl_std_100.rs  mod.rs
src/sr/: mod.rs  nonsemantic_debugprintf.rs  nonsemantic_shader_debuginfo_100.rs
