[package]
description = "Ergonomic SPIR-V extension bindings for rspirv"
edition = "2024"
license = "Apache-2.0"
name = "rspirv-ext"
repository = "https://github.com/wingertge/rspirv-ext"
version = "0.1.0"

[features]
deserialize = ['serde', 'bitflags/serde']
serialize = ['serde', 'bitflags/serde']

[dependencies]
bitflags = "2.9"
rspirv = "0.12.0+sdk-1.3.268.0"
serde = { version = "1", features = ["derive"], optional = true }

[workspace]
members = ["autogen", "."]
