[package]
authors = ["gfx-rs developers", "Lei Zhang <antiagainst@gmail.com>"]
edition = "2018"
name = "rspirv-autogen-ext"
version = "0.1.0"

publish = false

description = "Automatic code generation module for rspirv"
documentation = "https://docs.rs/rspirv"
keywords = ["spirv", "grammar", "codegen"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gfx-rs/rspirv"

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
